fix anim letter spacing issue

--- a/src/index.css
+++ b/src/index.css
@@ -59,4 +59,8 @@ body {
   .section__padding{
     padding: 2rem;
   }
+
+  .small{
+    display: none;
+  }
 }
